dctrl-tools (2.13) UNRELEASED; urgency=low

  * debian/control: suggest debtags, note grep-debtags in description

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 28 Oct 2007 14:07:05 +0200

dctrl-tools (2.12) unstable; urgency=low

  * Switched to git for source control.
  * make sort-dctrl read stdin if no file arguments are given
    Closes: #440348 (sort-dctrl outputs nothing if input is a pipe)
    Reported by Antti-Juhani Kaijanaho <ajk@debian.org>.
  * French translation update, closes: #442330
  * Provide a grep-debtags alias that sources debtags dumpavail.
    Closes: #423375
    (Add a grep-tags or grep-debtags that gets data from debtags dumpavail)
    Reported by Enrico Zini <enrico@debian.org>
  * po/README.Translators: Rosetta is not an option
  * po/README.Translators: misc fixes

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 28 Oct 2007 00:17:47 +0300

dctrl-tools (2.11) unstable; urgency=low

  * new program join-dctrl
    Closes: #136097 (grep-dctrl: Merging status and available would be helpful)
    Requested by Ben Armstrong <synrg@sanctuary.nslug.ns.ca>.
  * Update copyright lines
  * debian/rules: typo fix
  * Compatibility: remove (out of date, duplicates manpage information)
  * NEWS: delete (out of date)
  * README: delete (out of date and useless)
  * AUTHORS: delete (out of date and hard to keep up to date)
  * debian/README: update
  * debian/changelog: start 2.11
  * grep-dctrl/grep-dctrl.c: fix GET_BACKUP_FIELD for (size_t)-1
    on machines where sizeof(int) != sizeof(size_t)
  * export para_compare from lib/sorter.[ch]
  * GNUmakefile (test): call tester.sh using sh explicitly

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 05 Aug 2007 21:06:22 +0300

dctrl-tools (2.10) experimental; urgency=low

  * debian/changelog: merge in 2.9.3
  * delete  ./grep-dctrl-2.6.4-2.6.5.diff
  * create lib/, man/ and $(program)/
  * GNUmakefile: miscellaneous fixes
  * GNUmakefile. ifile.c: start using -Werror, fix one warning