@@ -1,8 +1,9 @@
 dctrl-tools (2.13) UNRELEASED; urgency=low
 
   * debian/control: suggest debtags, note grep-debtags in description
+  * lib/paragraph (para_parse_next): Performance improvements.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 28 Oct 2007 14:07:05 +0200
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 03 Nov 2007 10:03:29 +0200
 
 dctrl-tools (2.12) unstable; urgency=low
 
